# Texas-Holdem-Poker_Python

./: .gitignore  CHANGELOG.md  Holdem_Poker_0.2.0.py  Holdem_Poker_0.2.1.py  Holdem_Poker_0.2.4.py  Holdem_Poker_0.2.5.py  Holdem_Poker_0.2.6.0.py  Holdem_Poker_0.2.6.1.py  Holdem_Poker_0.2.6.2.py  Holdem_Poker_0.2.6.3.py  Holdem_Poker_0.2.6.4.py  Holdem_Poker_0.2.6.4_plane.py  Holdem_Poker_0.2.6.6.py  Holdem_Poker_0.2.6.7.py  Holdem_Poker_0.2.7.py  LICENSE  MANIFEST.in  README.md  Tests.py  pyproject.toml  requirements.txt  tests2.py
archive/: Holdem_Poker_0.1.0.py  Holdem_Poker_0.2.3.py  Holdem_Poker_0.2.6.4_plane.py  Holdem_Poker_0.2.6.5_August.py  Holdem_Poker_0.2.6.6.py  Holdem_Poker_0.2.6.7.py  Holdem_Poker_0.2.7.py  Test_Player_Hands.py
src/holdem/: __init__.py  __main__.py
src/holdem/core/: __init__.py  cards.py  enums.py  evaluator.py
src/holdem/engine/: __init__.py  allocate_pots.py  betting.py  game.py  showdown.py
src/holdem/io/: __init__.py  cli.py
src/holdem/strategies/: __init__.py  base.py  features.py  simple.py
src/holdem/table/: __init__.py  buttons_blinds.py  peek.py  player.py  pots.py  table.py
src/holdem/utils/: __init__.py  errors.py  rng.py
tests/: test_cards.py
